# common

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr.yml  push.yml
common/: Array.hpp  BigInteger.cpp  BigInteger.hpp  CMakeLists.txt  Call.cpp  Call.hpp  DataMgr.cpp  DataMgr.hpp  DataStore.hpp  Handle.cpp  Handle.hpp  Instance.hpp  MD5.cpp  MD5.hpp  MemPool.hpp  ObjectAlloc.cpp  ObjectAlloc.hpp  Prop.cpp  Prop.hpp  Ref.hpp  SHA1.cpp  SHA1.hpp  String.hpp  Thread.hpp  Time.cpp  Time.hpp  XML.hpp
common/array/: CSimpleSortedArray.hpp
common/datamgr/: CBaseManaged.hpp  CDataMgr.cpp  CDataMgr.hpp  TManaged.hpp
common/datastore/: CDataStore.cpp  CDataStore.hpp  CDataStoreCache.hpp
common/handle/: CHandleObject.hpp
common/instance/: TExtraInstanceRecyclable.hpp  TInstanceId.hpp  TInstanceIdTable.hpp  TSingletonInstanceId.hpp
common/mempool/: MemChunk.cpp  MemChunk.hpp  MemPool.cpp  MemPool.hpp
common/objectalloc/: CObjectHeap.cpp  CObjectHeap.hpp  CObjectHeapList.cpp  CObjectHeapList.hpp  ObjAllocGlobals.cpp  ObjAllocGlobals.hpp
common/prop/: Types.hpp
common/ref/: TRefCnt.hpp  TRefCntPtr.hpp
common/string/: CStringManager.cpp  CStringManager.hpp  CStringMemory.cpp  CStringMemory.hpp  RCString.cpp  RCString.hpp
common/thread/: OsTls.cpp  OsTls.hpp  Tls.cpp  Tls.hpp
common/xml/: Expat.hpp  XMLAttribute.hpp  XMLNode.cpp  XMLNode.hpp  XMLTree.cpp  XMLTree.hpp
lib/: CMakeLists.txt
test/: Array.cpp  BigInteger.cpp  CMakeLists.txt  DataStore.cpp  Handle.cpp  MemPool.cpp  ObjectAlloc.cpp  Prop.cpp  SHA1.cpp  String.cpp  Thread.cpp  XML.cpp
